// Proto definition for Agglayer Certificate Submition Service

syntax = "proto3";

package proto;
option go_package = "github.com/agglayer/aggkit/agglayer/proto/node;node";
import "types/certificate.proto";

// Service for submitting certificate to an agglayer node.
service AgglayerCertificateSubmissionService {
  // Method used to submit a certificate.
  rpc SubmitCertificate(SubmitCertificateRequest)
      returns (SubmitCertificateResponse);
}

// Type used to submit a certificate.
message SubmitCertificateRequest {
  // The certificate to submit.
  types.Certificate certificate = 1;
}

// Type used as response to a certificate submission.
message SubmitCertificateResponse {
  // The certificate id of the submitted certificate.
  types.CertificateId certificate_id = 1;
}

// The kind of error that occurred and that are reported by the service.
enum ErrorKind {
  // Unspecified error.
  ERROR_KIND_UNSPECIFIED = 0;
  // The signature verification failed.
  ERROR_KIND_SIGNATURE_VERIFICATION = 1;
}
