syntax = "proto3";

package agglayer.protocol.types.v1;
option go_package = "github.com/agglayer/aggkit/agglayer/proto/types;types";
import "types/bytes.proto";

// Represents a Merkle proof.
message MerkleProof {
  // The root of the Merkle tree.
  FixedBytes32 root = 1;
  // The path from the leaf to the root.
  repeated FixedBytes32 siblings = 2;
}
